crates/resolving/tests/snapshots/resolving__001_local_resolution_explicit.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Explicit

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - value
  - Just
  - Id
  - Nothing
  - eq

Exported Types:
  - HiddenConstructor
  - Id
  - Eq
  - Synonym
  - Maybe

Local Terms:
  - value
  - eqMaybe
  - eqId
  - eq
  - HiddenType
  - Just
  - Id
  - Nothing
  - HiddenConstructor

Local Types:
  - HiddenConstructor
  - HiddenType
  - Id
  - Eq
  - Synonym
  - Maybe
