crates/resolving/tests/snapshots/resolving__002_import_resolution_import_qualified_implicit.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportQualifiedImplicit

Unqualified Imports:

Qualified Imports:

L Terms:
  - MkLibTy is Implicit
  - Ctor2 is Implicit
  - hideMe is Implicit
  - MkHideTy is Implicit
  - Ctor3 is Implicit
  - libFn is Implicit
  - Ctor1 is Implicit

L Types:
  - LibTy is Implicit
  - MultiTy is Implicit
  - TypeOnly is Implicit
  - HideTy is Implicit

Exported Terms:
  - MkHideTy
  - Ctor3
  - libFn
  - Ctor2
  - MkLibTy
  - Ctor1
  - hideMe

Exported Types:
  - LibTy
  - MultiTy
  - TypeOnly
  - HideTy

Local Terms:

Local Types:

Errors:
