crates/resolving/tests/snapshots/resolving__002_import_resolution_import_unqualified_explicit.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportUnqualifiedExplicit

Unqualified Imports:

Terms:
  - MkLibTy is Explicit
  - Ctor3 is Explicit
  - libFn is Explicit
  - Ctor1 is Explicit

Types:
  - LibTy is Explicit
  - MultiTy is Explicit
  - TypeOnly is Explicit

Qualified Imports:

Exported Terms:
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor3

Exported Types:
  - LibTy
  - MultiTy
  - TypeOnly

Local Terms:

Local Types:

Errors:
