crates/resolving/tests/snapshots/resolving__002_import_resolution_import_unqualified_hiding.snap
---
source: crates/resolving/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportUnqualifiedHiding

Unqualified Imports:

Terms:
  - libFn is Implicit
  - hideMe is Hidden

Types:

Qualified Imports:

Exported Terms:
  - libFn

Exported Types:

Local Terms:

Local Types:
